[iOS] ASSERTION FAILED: !isMainThread() in WebCore::SpeechRecognitionCaptureSourceImpl::audioSamplesAvailable https://bugs.webkit.org/show_bug.cgi?id=226247 <rdar://problem/78481513>

Unreviewed, drop threading assertions I added in r277921 as my understanding was wrong
about which thread the functions run on and they are hitting on the bots.

* Modules/speech/SpeechRecognitionCaptureSourceImpl.cpp:
(WebCore::SpeechRecognitionCaptureSourceImpl::updateDataSource):
* Modules/speech/SpeechRecognitionCaptureSourceImpl.h:

Canonical link: https://commits.webkit.org/238140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278056 268f45cc-cd09-0410-ab3c-d52691b4dbfc